# CSEN-317

./: .gitignore  ARCHITECTURE.md  DELIVERY_CHECKLIST.md  DEMO.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  ScaleTest.py  TESTING.md  TESTING_NOTES.md  TEST_SUITE_SUMMARY.md  finalreport.txt  pyproject.toml  requirements.txt  run_local.sh  run_p2p.sh  verify_imports.py  verify_setup.sh
configs/: node1.yml  node1_local.yml  node2.yml  node2_local.yml  node3.yml  node3_local.yml
data/: .gitkeep
deploy/: Dockerfile  docker-compose.yml
deploy/k8s/: README-k8s.md  configmap.yaml  deployment.yaml  service.yaml
src/: __init__.py  client_tui.py  common.py  election.py  failure.py  membership.py  node.py  ordering.py  peer.py  peer_tui.py  storage.py  transport.py
tests/: README.md  __init__.py  demo_01_basic_messaging.py  demo_02_leader_failure.py  demo_03_rejoin_as_follower.py  demo_04_concurrent_clients.py  demo_05_out_of_order.py  demo_06_persistence.py  demo_07_network_monitoring.py  demo_08_client_reconnection.py  load_test.py  run_all_tests.py  stress_test.py  test_election.py  test_failure.py  test_integration_local.py  test_ordering.py
